fixed problem with border not showing and removed background  colour for now

--- a/mongodb-browser/src/front-end/src/components/style.css
+++ b/mongodb-browser/src/front-end/src/components/style.css
@@ -25,8 +25,8 @@
 
 .header-main-box {
     margin-bottom: 30px;
-    background-color: rgb(223, 240, 255);
-    border-bottom: 2px rgb(121, 193, 255);
+    /* background-color: rgb(223, 240, 255); */
+    border-bottom: solid 2px rgb(121, 193, 255);
     height: 50px;
     display: flex;
     flex-direction: row;
@@ -36,8 +36,8 @@
 
 .footer-main-box {
     margin-top: 30px;
-    background-color: rgb(223, 240, 255);
-    border-top: 2px rgb(121, 193, 255);
+    /* background-color: rgb(223, 240, 255); */
+    border-top: solid 2px rgb(121, 193, 255);
     height: 50px;
     display: flex;
     flex-direction: row;
